fix: убрать gap

--- a/blocks/lyubimovka/__text/lyubimovka__text.css
+++ b/blocks/lyubimovka/__text/lyubimovka__text.css
@@ -1,7 +1,7 @@
 .lyubimovka__text{
   max-width: 420px;
   width: 100%;
-  margin: 0 0 0 180px;
+  margin: 0 120px 0 180px;
 
   font-family: 'Neue Machina Regular', sans-serif;
   font-weight: 400;
