--- a/blocks/lyubimovka/lyubimovka.css
+++ b/blocks/lyubimovka/lyubimovka.css
@@ -2,5 +2,4 @@
   display: grid;
   padding: 33px 0 0 0;
   grid-template-columns: repeat(2, auto);
-  grid-column-gap: 120px;
 }
